// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Samp checkGrammar=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp checkGrammar=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp checkHighlight=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp checkHighlight=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp checkSpaces=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp checkSpaces=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp className="my-classname" 1`] = `
<samp
  className="uu5-bricks-samp my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp className="test-classname" 1`] = `
<samp
  className="uu5-bricks-samp test-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp content="This is Content from ContentMixin" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
>
  This is Content from ContentMixin
</samp>
`;

exports[`UU5.Bricks.Samp content=12345 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
>
  12345
</samp>
`;

exports[`UU5.Bricks.Samp controlled=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp controlled=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp default props 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp disabled=false 1`] = `
<samp
  className="uu5-bricks-samp"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp disabled=false 3`] = `
<samp
  className="uu5-bricks-samp"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp disabled=true 1`] = `
<samp
  className="uu5-bricks-samp"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp disabled=true 3`] = `
<samp
  className="uu5-bricks-samp"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp docKit examples UU5.Bricks.Samp should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    id="uuID02"
    key="uuID02"
  >
     
    Computer said: 
    <Samp
      id="uuID03"
    >
      I will kill all humanity! Now!
    </Samp>
  </P>
</div>
`;

exports[`UU5.Bricks.Samp dynamic=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp dynamic=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp fullTextSearchPriority=0 1`] = `
<samp
  className="uu5-bricks-samp uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp fullTextSearchPriority=0 2`] = `
<samp
  className="uu5-bricks-samp uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp hidden=false 1`] = `
<samp
  className="uu5-bricks-samp"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp hidden=false 3`] = `
<samp
  className="uu5-bricks-samp"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp hidden=true 1`] = `
<samp
  className="uu5-bricks-samp"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp hidden=true 3`] = `
<samp
  className="uu5-bricks-samp"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp id="myId" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="myId"
/>
`;

exports[`UU5.Bricks.Samp id="test-id" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="test-id"
/>
`;

exports[`UU5.Bricks.Samp ignoreHTML=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp ignoreHTML=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp mainAttrs=undefined 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp name="myName" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp nestingLevel="box" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp nestingLevel="inline" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp noPrint=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp noPrint=true 1`] = `
<samp
  className="uu5-bricks-samp uug-1ak6bum"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp selected=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp selected=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp style="padding:8px; borderRadius: 2px" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Samp style={"backgroundColor":"red","color":"blue"} 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Samp style={"margin":8} 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Samp textCorrector=false 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp textCorrector=true 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Samp tooltip="My Tooltip" 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
/>
`;
